# binseq

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: subset.bq  subset.vbq  subset.vbq.vqi  subset_R1.bq  subset_R2.bq
examples/: auto-write.rs  example.rs  grep.rs  index.rs  network_streaming.rs  parallel_processing.rs  parallel_processing_long_bp.rs  parallel_range.rs  read_write.rs  reset_readers.rs  streaming.rs  write.rs
src/: context.rs  error.rs  header.rs  lib.rs  main.rs  parallel.rs  policy.rs  prelude.rs  reader.rs  record.rs  utils.rs  write.rs  writer.rs
src/bq/: header.rs  mod.rs  reader.rs  utils.rs  writer.rs
src/cbq/: read.rs  write.rs
src/cbq/core/: block.rs
src/context/: mod.rs  structs.rs  traits.rs
src/parallel/: mod.rs
src/reader/: mmap.rs  mod.rs  paired.rs  paired_mmap.rs  paired_reader.rs  parallel.rs  read.rs  reader.rs  set.rs  single.rs  single_mmap.rs  utils.rs
src/record/: binseq_record.rs  config.rs  mod.rs  record.rs  record_pair.rs  ref_record.rs  sequencing_record.rs
src/utils/: fastx.rs
src/vbq/: header.rs  index.rs  mod.rs  reader.rs  writer.rs
src/writer/: mod.rs  policy.rs  utils.rs  writer.rs
