[package]
name = "binseq"
version = "0.7.3"
edition = "2021"
description = "A high efficiency binary format for sequencing data"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
repository = "https://github.com/arcinstitute/binseq"
documentation = "https://docs.rs/binseq"
categories = ["science::bioinformatics", "encoding", "data-structures"]
keywords = ["bioinformatics", "nucleotide", "sequencing", "genomics", "fastq"]

[dependencies]
anyhow = "1.0.94"
auto_impl = "1.3.0"
bitnuc = "0.3.0"
bytemuck = "1.21.0"
byteorder = "1.5.0"
itoa = "1.0.14"
memmap2 = "0.9.5"
num_cpus = "1.17.0"
rand = { version = "0.9.1", features = ["small_rng"] }
thiserror = "2.0.8"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
nucgen = "0.2.0"
niffler = "3.0.0"
seq_io = "0.3.2"
parking_lot = "0.12.3"
itoa = "1.0.14"
memchr = "2.7.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
