[package]
name = "binseq"
version = "0.9.3"
edition = "2024"
description = "A high efficiency binary format for sequencing data"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
repository = "https://github.com/arcinstitute/binseq"
documentation = "https://docs.rs/binseq"
categories = ["science::bioinformatics", "encoding", "data-structures"]
keywords = ["binary", "nucleotide", "sequencing", "genomics", "fastq"]

[dependencies]
anyhow = {version = "1.0.100", optional = true}
auto_impl = "1.3.0"
bitnuc = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
byteorder = "1.5.0"
itoa = "1.0.17"
memchr = "2.7.6"
memmap2 = "0.9.9"
num_cpus = "1.17.0"
paraseq = { version = "0.4.8", optional = true }
parking_lot = {version = "0.12.5", optional = true }
rand = { version = "0.9.2", features = ["small_rng"] }
sucds = "0.8.3"
thiserror = "2.0.17"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
anyhow = "1.0.100"
parking_lot = "0.12.5"
clap = { version = "4.5.54", features = ["derive"] }
paraseq = "0.4.8"

[features]
default = ["paraseq", "anyhow"]
anyhow = ["dep:anyhow"]
paraseq = ["dep:paraseq", "dep:parking_lot"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
